[package]
name = "wasm-png"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
png = "0.15"
byteorder = "1.3" # Reading numbers in [big/little]-endian.
png-decoder = { path = "/home/matthieu/git/perso/png-decoder" }

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
lto = true
